# playwright-multi-crawler

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci-dev.yml  systemd-deploy.yaml
config/: install_dependencies.sh
example/: crawl.py  job.py  playwright-multi-crawler.service
myapp/: main.py
src/: __init__.py  cli.py  config.py  main.py
src/api/: health.py  jobs.py  metrics.py
src/common/: metrics.py  tool_utils.py
src/core/: job_processor.py  job_queue.py  job_runner.py  playwright_manager.py  state_manager.py
src/models/: job.py
src/worker/: job_processor.py  job_runner.py
tests/: conftest.py  test_api.py  test_cli.py  test_example_client.py  test_example_job.py  test_job_runner.py  test_lifecycle.py  test_packaging.py  test_state_manager.py
