[project]
name = "playwright-multi-crawler"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyvirtualdisplay>=3.0",
    "uvicorn>=0.38.0",
]
